--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <li>
                 <a href="/#/archive">存档</a>
             </li>
+            <li>
+                <a href=" http://isnowfy.github.io/simple/">
+                    </li>
         </ul>
     </div>
     <div class="wrap-header">
