--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="/#/archive">存档</a>
             </li>
             <li>
-                <a href=" http://isnowfy.github.io/simple/">
+                <a href=" http://isnowfy.github.io/simple/">写作</a>
                     </li>
         </ul>
     </div>
