--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="/#/archive">存档</a>
             </li>
             <li>
-                <a href="/sweetly/src/">管理</a>
+                <a href="/">首页</a>
                     </li>
         </ul>
     </div>
@@ -50,7 +50,7 @@
 });
     </script>
     <div class="footer">
-        <p>© Copyright 2016  Designed by sweetly</p>
+        <p>© Copyright 2016  Designed by <a href="/sweetly/src/">sweetly</a></p>
     </div>
 </div>
 <script src="main.js"></script>
