--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
         <a href="/" id="title"></a>
         </h1>
     </div>
-    <div class="innermain" id="main">
-    </div>
-    <script>
+    <div class="innermain" id="main"><div id="vcomments"></div>
+         <script>
         new Valine({
     el: '#vcomments' ,
     appId: '9xv7BruNNkPofAy2j9xfjn4t-gzGzoHsz',
@@ -48,6 +47,8 @@
     placeholder: 'ヾﾉ≧∀≦)o来评论下吧!' 
 });
     </script>
+    </div>
+   
     <div class="footer">
         <p>© Copyright 2016  Designed by <a href="/sweetly/src/">sweetly</a></p>
     </div>
