--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <a href="/" id="title"></a>
         </h1>
     </div>
-    <div class="innermain" id="main"><div id="vcomments"></div>
+    <div class="innermain" id="main">
+    </div>
+    <div id="vcomments">
          <script>
         new Valine({
     el: '#vcomments' ,
@@ -47,8 +49,6 @@
     placeholder: 'ヾﾉ≧∀≦)o来评论下吧!' 
 });
     </script>
-    </div>
-   
     <div class="footer">
         <p>© Copyright 2016  Designed by <a href="/sweetly/src/">sweetly</a></p>
     </div>
