--- a/tx.html
+++ b/tx.html
@@ -47,7 +47,7 @@
 <br>
 <br>
     <!-- UY BEGIN -->
-<div id="vcomments"></div>
+<div id="vcomments">
          <script>
         new Valine({
     el: '#vcomments' ,
