--- a/tx.html
+++ b/tx.html
@@ -8,9 +8,6 @@
     <title>远洋的网上自留地</title>
     <link rel="shortcut icon" href="/static/favicon.png"/>
     <link rel="stylesheet" type="text/css" href="/main.css" />
-    <script src="http://cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
-    <!--Valine 的核心代码库:-->
-    <script src="http://unpkg.com/valine/dist/Valine.min.js"></script>
 </head>
 <body>
 <div class="main">
@@ -124,5 +121,8 @@ $(document).ready(function() {
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ["\\(", "\\)"]], processEscapes: true}});
 </script>
+	<script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
+    <!--Valine 的核心代码库:-->
+    <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
 </body>
 </html>
