--- a/mysql1.html
+++ b/mysql1.html
@@ -60,6 +60,7 @@ error manager of pid-file quit without updating file
     notify:false, 
     verify:false, 
     avatar:'mm', 
+	   visitor: true // 阅读量统计 
     placeholder: 'ヾﾉ≧∀≦)o来评论下吧!' 
 });
     </script>
